# Recipe-Retrieval-2.0

./: CHANGELOG.md  DSAN5400_project.drawio  README.md  environment.yml  pyproject.toml
Input_Processing/: main_input_processing.py
data/: inverted_index.py
docs/: conf.py
input_processing/: main_input_processing.py  speech_processing.py  text_processing.py
recipe_retrieval_2.0/: CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
recipe_retrieval_2.0/Input_Processing/: main_input_processing.py  requirements.txt  speech_processing.py  text_processing.py
recipe_retrieval_2.0/data/: preprocess.py
recipe_retrieval_2.0/docs/: Makefile  example.ipynb  make.bat
recipe_retrieval_2.0/src/recipe_retrieval_2.0/: __init__.py  recipe_retrieval_2.0.py
recipe_retrieval_2.0/src/recipe_retrieval_2.0/utils/: recipe_searcher.py
recipe_retrieval_2.0/tests/: interted_index.json  test_data.json  test_recipe_retrieval_2.0.py
recipe_retrieval_2.0/website/: app.py  receive.html  script.js
recipe_retrieval_2.0/website/static/js/: script.js
recipe_retrieval_2.0/website/templates/: receive.html
src/recipe_retrieval_2.0/: recipe_retrieval_2.0.py
src/recipe_retrieval_2.0/utils/: preprocess.py  recipe_searcher.py
tests/: test_recipe_retrieval_2.0.py
website/: app.py
website/static/js/: script.js
website/templates/: receive.html
