[tool.poetry]
name = "Recipe-Retrieval-2.0"
version = "0.1.0"
description = "IR recipe retrieval from ingredients"
authors = ["Jess Godes, Linda Ding, Yi Luo, Chuyun Kuang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
